Add clan searching and detail view

--- a/lang/en-GB/en-GB.clans.ini
+++ b/lang/en-GB/en-GB.clans.ini
@@ -7,3 +7,15 @@
 
 FILTER_SEARCH_LABEL = "Clanname"
 FILTER_SEARCH_PLACEHOLDER = "Clanname"
+SEARCH_RESULT_TABLE_HEAD_COUNTER_TEXT = "#"
+SEARCH_RESULT_TABLE_HEAD_ABBREVIATION_TEXT = "Tag"
+SEARCH_RESULT_TABLE_HEAD_NAME_TEXT = "Name"
+SEARCH_RESULT_TABLE_HEAD_CLANID_TEXT = "Clan-ID"
+SEARCH_RESULT_TABLE_HEAD_LEADING_TEXT = "Leading"
+DETAIL_GENERAL_HEADLINE = "General"
+DETAIL_MEMBERS_HEADLINE = "Mitglieder"
+MEMBERS_TABLE_HEAD_COUNTER_TEXT = "#"
+MEMBERS_TABLE_HEAD_NAME_TEXT = "Name"
+MEMBERS_TABLE_HEAD_ROLE_TEXT = "Role"
+MEMBERS_TABLE_HEAD_ID_TEXT = "Account-ID"
+MEMBERS_TABLE_HEAD_CREATED_TEXT = "Account Created"
