Improve Language and add clan page

--- a/lang/de-DE/de-DE.clans.ini
+++ b/lang/de-DE/de-DE.clans.ini
@@ -11,11 +11,11 @@ SEARCH_RESULT_TABLE_HEAD_COUNTER_TEXT = "#"
 SEARCH_RESULT_TABLE_HEAD_ABBREVIATION_TEXT = "Tag"
 SEARCH_RESULT_TABLE_HEAD_NAME_TEXT = "Name"
 SEARCH_RESULT_TABLE_HEAD_CLANID_TEXT = "Clan-ID"
-SEARCH_RESULT_TABLE_HEAD_LEADING_TEXT = "Leading"
-DETAIL_GENERAL_HEADLINE = "General"
-DETAIL_MEMBERS_HEADLINE = "Members"
+SEARCH_RESULT_TABLE_HEAD_LEADING_TEXT = "Leitung"
+DETAIL_GENERAL_HEADLINE = "Allgemein"
+DETAIL_MEMBERS_HEADLINE = "Mitglieder"
 MEMBERS_TABLE_HEAD_COUNTER_TEXT = "#"
 MEMBERS_TABLE_HEAD_NAME_TEXT = "Name"
-MEMBERS_TABLE_HEAD_ROLE_TEXT = "Role"
-MEMBERS_TABLE_HEAD_ID_TEXT = "Account-ID"
-MEMBERS_TABLE_HEAD_CREATED_TEXT = "Account Created"
+MEMBERS_TABLE_HEAD_ROLE_TEXT = "Position"
+MEMBERS_TABLE_HEAD_ID_TEXT = "Konto-ID"
+MEMBERS_TABLE_HEAD_CREATED_TEXT = "Konto erstellt"
