--- a/lang/en-GB/en-GB.accounts.ini
+++ b/lang/en-GB/en-GB.accounts.ini
@@ -35,3 +35,4 @@ STATS_PERFORMANCE_DEFENCE_POINTS_LABEL = "Base Defense Points"
 STATS_VEHICLE_TYPES_HEADLINE = "Vehicle Types"
 STATS_VEHICLE_NATIONS_HEADLINE = "Nations"
 STATS_VEHICLE_VEHICLES_HEADLINE = "Vehicles"
+TEXT_NO_CLAN = 'none'
