--- a/lang/de-DE/de-DE.clans.ini
+++ b/lang/de-DE/de-DE.clans.ini
@@ -8,7 +8,7 @@
 FILTER_SEARCH_LABEL = "Clanname"
 FILTER_SEARCH_PLACEHOLDER = "Clanname"
 SEARCH_RESULT_TABLE_HEAD_COUNTER_TEXT = "#"
-SEARCH_RESULT_TABLE_HEAD_ABBREVIATION_TEXT = "Tag"
+SEARCH_RESULT_TABLE_HEAD_ABBREVIATION_TEXT = "Kürzel"
 SEARCH_RESULT_TABLE_HEAD_NAME_TEXT = "Name"
 SEARCH_RESULT_TABLE_HEAD_CLANID_TEXT = "Clan-ID"
 SEARCH_RESULT_TABLE_HEAD_LEADING_TEXT = "Leitung"
