--- a/lang/en-GB/en-GB.main.ini
+++ b/lang/en-GB/en-GB.main.ini
@@ -8,12 +8,10 @@
 APP_HEADLINE = "DSE (Data Search Engine)"
 BUTTON_DETAIL_VIEW_TITLE = "Open detail view"
 ICON_ACTIONS_TITLE = "Actions"
-MENU_ITEM_ACCOUNTS_TITLE = "Go to Accounts page"
-MENU_ITEM_ACCOUNTS_TEXT = "Accounts"
-MENU_ITEM_CLANS_TITLE = "Go to Clans page"
+MENU_ITEM_ACCOUNTS_TITLE = "Go to Players Search page"
+MENU_ITEM_ACCOUNTS_TEXT = "Players"
+MENU_ITEM_CLANS_TITLE = "Go to Clans Search page"
 MENU_ITEM_CLANS_TEXT = "Clans"
-MENU_ITEM_ENCYCLOPEDIA_TITLE = "Go to Tankopedia page"
-MENU_ITEM_ENCYCLOPEDIA_TEXT = "Tankopedia"
 MENU_ITEM_RATINGS_TITLE = "Go to Player Ratings page"
 MENU_ITEM_RATINGS_TEXT = "Player Ratings"
 MENU_ITEM_CLANRATINGS_TITLE = "Go to Clan Ratings page"
