--- a/lang/fr-FR/fr-FR.filter.ini
+++ b/lang/fr-FR/fr-FR.filter.ini
@@ -5,7 +5,7 @@
 ;
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-FILTER_SEARCH_LABEL = "Nickname"
-FILTER_SEARCH_PLACEHOLDER = "Nickname"
-FILTER_LIMIT_TITLE = "Limit"
-FILTER_SUBMIT_BUTTON_TEXT = "Filter anwenden"
+FILTER_SEARCH_LABEL = "Nom d'utilisateur"
+FILTER_SEARCH_PLACEHOLDER = "Nom d'utilisateur"
+FILTER_LIMIT_TITLE = "Limitation"
+FILTER_SUBMIT_BUTTON_TEXT = "Appliquer le filtre"
