change clan member created date to joined date

--- a/lang/de-DE/de-DE.accounts.ini
+++ b/lang/de-DE/de-DE.accounts.ini
@@ -7,7 +7,7 @@
 
 SEARCH_RESULT_TABLE_HEAD_COUNTER_TEXT = "#"
 SEARCH_RESULT_TABLE_HEAD_NICK_TEXT = "Nickname"
-SEARCH_RESULT_TABLE_HEAD_ACCID_TEXT = "Konto-ID"
+SEARCH_RESULT_TABLE_HEAD_ACCID_TEXT = "Account-ID"
 STATS_GENERAL_HEADLINE = "Konto Daten"
 STATS_GENERAL_NICK_LABEL = "Nickname"
 STATS_GENERAL_CREATED_LABEL = "Konto erstellt"
