--- a/lang/de-DE/de-DE.clans.ini
+++ b/lang/de-DE/de-DE.clans.ini
@@ -15,5 +15,6 @@ DETAIL_MEMBERS_HEADLINE = "Mitglieder"
 MEMBERS_TABLE_HEAD_COUNTER_TEXT = "#"
 MEMBERS_TABLE_HEAD_NAME_TEXT = "Name"
 MEMBERS_TABLE_HEAD_ROLE_TEXT = "Position"
-MEMBERS_TABLE_HEAD_ID_TEXT = "Konto-ID"
+MEMBERS_TABLE_HEAD_ID_TEXT = "Account-ID"
 MEMBERS_TABLE_HEAD_CREATED_TEXT = "Konto erstellt"
+MEMBERS_TABLE_HEAD_JOINED_TEXT = "Beigetreten"
