--- a/lang/en-GB/en-GB.clans.ini
+++ b/lang/en-GB/en-GB.clans.ini
@@ -17,3 +17,4 @@ MEMBERS_TABLE_HEAD_NAME_TEXT = "Name"
 MEMBERS_TABLE_HEAD_ROLE_TEXT = "Role"
 MEMBERS_TABLE_HEAD_ID_TEXT = "Account-ID"
 MEMBERS_TABLE_HEAD_CREATED_TEXT = "Account Created"
+MEMBERS_TABLE_HEAD_JOINED_TEXT = "Joined"
