--- a/lang/fr-FR/fr-FR.clans.ini
+++ b/lang/fr-FR/fr-FR.clans.ini
@@ -17,3 +17,4 @@ MEMBERS_TABLE_HEAD_NAME_TEXT = "Nom"
 MEMBERS_TABLE_HEAD_ROLE_TEXT = "Position"
 MEMBERS_TABLE_HEAD_ID_TEXT = "ID de compte"
 MEMBERS_TABLE_HEAD_CREATED_TEXT = "Compte créé"
+MEMBERS_TABLE_HEAD_JOINED_TEXT = "Entrer au clan"
