Implement game switcher

--- a/lang/en-GB/en-GB.filter.ini
+++ b/lang/en-GB/en-GB.filter.ini
@@ -9,3 +9,4 @@ FILTER_SEARCH_LABEL = "Nickname"
 FILTER_SEARCH_PLACEHOLDER = "Nickname"
 FILTER_LIMIT_TITLE = "Limit"
 FILTER_SUBMIT_BUTTON_TEXT = "Apply Filter"
+FILTER_GAME_TITLE = "Game"
