--- a/lang/fr-FR/fr-FR.filter.ini
+++ b/lang/fr-FR/fr-FR.filter.ini
@@ -9,3 +9,4 @@ FILTER_SEARCH_LABEL = "Nom d'utilisateur"
 FILTER_SEARCH_PLACEHOLDER = "Nom d'utilisateur"
 FILTER_LIMIT_TITLE = "Limitation"
 FILTER_SUBMIT_BUTTON_TEXT = "Appliquer le filtre"
+FILTER_GAME_TITLE = "Partie"
