Push first wows version

--- a/lang/de-DE/de-DE.accounts.ini
+++ b/lang/de-DE/de-DE.accounts.ini
@@ -15,15 +15,19 @@ STATS_GENERAL_UPDATED_LABEL = "Letzte Aktualisierung"
 STATS_GENERAL_RATING_LABEL = "Persönliche Wertung"
 STATS_GENERAL_LANGUAGE_LABEL = "Sprache"
 STATS_GENERAL_CLAN_LABEL = "Clan"
+STATS_GENERAL_LEVEL_LABEL = "Wehrpass Level"
 STATS_OVERALL_HEADLINE = "Gesamtergebnisse"
 STATS_OVERALL_BATTLES_LABEL = "Teilgenommene Gefechte"
+STATS_OVERALL_DISTANCE_LABEL = "Entfernung"
 STATS_OVERALL_WINS_LABEL = "Siege"
+STATS_OVERALL_DRAWS_LABEL = "Unentschieden"
 STATS_OVERALL_LOSSES_LABEL = "Niederlagen"
 STATS_OVERALL_SURVIVED_LABEL = "Überlebte Gefechte"
 STATS_OVERALL_XP_LABEL = "Erfahrung"
 STATS_OVERALL_BATTLE_AVG_XP_LABEL = "Mittlere Erfahrung je Gefecht"
 STATS_OVERALL_MAX_XP_LABEL = "Max. Erfahrung pro Gefecht"
 STATS_PERFORMANCE_HEADLINE = "Leistung in Gefechten"
+STATS_PERFORMANCE_PLANES_KILLED_LABEL = "Flugzeuge zerstört"
 STATS_PERFORMANCE_FRAGS_LABEL = "Panzer zerstört"
 STATS_PERFORMANCE_SPOTTED_LABEL = "Aufgeklärt"
 STATS_PERFORMANCE_HITS_PERCENTS_LABEL = "Treffergenauigkeit"
@@ -31,7 +35,15 @@ STATS_PERFORMANCE_DAMAGE_DEALT_LABEL = "Schaden"
 STATS_PERFORMANCE_BATTLE_AVG_DEMAGE_LABEL = "Durchschnittlicher Schaden verursacht im Gefecht"
 STATS_PERFORMANCE_CAPTURE_POINTS_LABEL = "Eroberungspunkte"
 STATS_PERFORMANCE_DEFENCE_POINTS_LABEL = "Verteidigungspunkte"
+STATS_PERFORMANCE_MAX_FRAGS_LABEL = "Max. zerstörte Schiffe"
+STATS_PERFORMANCE_MAX_PLANES_LABEL = "Max. zerstörte Flugzeuge"
 STATS_VEHICLE_TYPES_HEADLINE = "Fahrzeugtyp"
 STATS_VEHICLE_NATIONS_HEADLINE = "Nationen"
 STATS_VEHICLE_VEHICLES_HEADLINE = "Fahrzeuge"
 TEXT_NO_CLAN = 'kein'
+STATS_SHIPS_TABLE_COUNTER_TEXT = "#"
+STATS_SHIPS_TABLE_TIER_TEXT = "Stufe"
+STATS_SHIPS_TABLE_BATTLES_TEXT = "Gefechte"
+STATS_SHIPS_TABLE_WINS_TEXT = "Siege"
+STATS_SHIPS_TABLE_FRAGS_TEXT = "Versenkt"
+STATS_SHIPS_TABLE_PLANES_TEXT = "Abgeschossen"
