--- a/lang/en-GB/en-GB.accounts.ini
+++ b/lang/en-GB/en-GB.accounts.ini
@@ -15,15 +15,19 @@ STATS_GENERAL_UPDATED_LABEL = "Last Update"
 STATS_GENERAL_RATING_LABEL = "Personal Rating"
 STATS_GENERAL_LANGUAGE_LABEL = "Language"
 STATS_GENERAL_CLAN_LABEL = "Clan"
+STATS_GENERAL_LEVEL_LABEL = "Service Record Level"
 STATS_OVERALL_HEADLINE = "Overall Results"
 STATS_OVERALL_BATTLES_LABEL = "Battles Participated"
+STATS_OVERALL_DISTANCE_LABEL = "Distance"
 STATS_OVERALL_WINS_LABEL = "Victories"
+STATS_OVERALL_DRAWS_LABEL = "Draws"
 STATS_OVERALL_LOSSES_LABEL = "Defeats"
 STATS_OVERALL_SURVIVED_LABEL = "Battles Survived"
 STATS_OVERALL_XP_LABEL = "Experience"
 STATS_OVERALL_BATTLE_AVG_XP_LABEL = "Average Experience per Battle"
 STATS_OVERALL_MAX_XP_LABEL = "Maximum Experience per Battle"
 STATS_PERFORMANCE_HEADLINE = "Battle Performance"
+STATS_PERFORMANCE_PLANES_KILLED_LABEL = "Planes killed"
 STATS_PERFORMANCE_FRAGS_LABEL = "Destroyed Vehicles"
 STATS_PERFORMANCE_SPOTTED_LABEL = "Detected"
 STATS_PERFORMANCE_HITS_PERCENTS_LABEL = "Hit Ratio"
@@ -31,7 +35,15 @@ STATS_PERFORMANCE_DAMAGE_DEALT_LABEL = "Damage Caused"
 STATS_PERFORMANCE_BATTLE_AVG_DEMAGE_LABEL = "Average Damage Caused per Battle"
 STATS_PERFORMANCE_CAPTURE_POINTS_LABEL = "Base Capture points"
 STATS_PERFORMANCE_DEFENCE_POINTS_LABEL = "Base Defense Points"
+STATS_PERFORMANCE_MAX_FRAGS_LABEL = "Max. destroyed ships"
+STATS_PERFORMANCE_MAX_PLANES_LABEL = "Max. destroyed planes"
 STATS_VEHICLE_TYPES_HEADLINE = "Vehicle Types"
 STATS_VEHICLE_NATIONS_HEADLINE = "Nations"
 STATS_VEHICLE_VEHICLES_HEADLINE = "Vehicles"
 TEXT_NO_CLAN = 'none'
+STATS_SHIPS_TABLE_COUNTER_TEXT = "#"
+STATS_SHIPS_TABLE_TIER_TEXT = "Tier"
+STATS_SHIPS_TABLE_BATTLES_TEXT = "Battles"
+STATS_SHIPS_TABLE_WINS_TEXT = "Wins"
+STATS_SHIPS_TABLE_FRAGS_TEXT = "Frags"
+STATS_SHIPS_TABLE_PLANES_TEXT = "Planes"
