General changes and fixes
* Remove old wot.class.php
* Add wows armament usage
* Some layout fixes

--- a/lang/en-GB/en-GB.accounts.ini
+++ b/lang/en-GB/en-GB.accounts.ini
@@ -27,8 +27,9 @@ STATS_OVERALL_XP_LABEL = "Experience"
 STATS_OVERALL_BATTLE_AVG_XP_LABEL = "Average Experience per Battle"
 STATS_OVERALL_MAX_XP_LABEL = "Maximum Experience per Battle"
 STATS_PERFORMANCE_HEADLINE = "Battle Performance"
-STATS_PERFORMANCE_PLANES_KILLED_LABEL = "Planes killed"
-STATS_PERFORMANCE_FRAGS_LABEL = "Destroyed Vehicles"
+STATS_PERFORMANCE_PLANES_KILLED_LABEL = "Aircraft destroyed"
+STATS_PERFORMANCE_FRAGS_WOT_LABEL = "Destroyed Vehicles"
+STATS_PERFORMANCE_FRAGS_WOWS_LABEL = "Warships destroyed"
 STATS_PERFORMANCE_SPOTTED_LABEL = "Detected"
 STATS_PERFORMANCE_HITS_PERCENTS_LABEL = "Hit Ratio"
 STATS_PERFORMANCE_DAMAGE_DEALT_LABEL = "Damage Caused"
@@ -40,10 +41,21 @@ STATS_PERFORMANCE_MAX_PLANES_LABEL = "Max. destroyed planes"
 STATS_VEHICLE_TYPES_HEADLINE = "Vehicle Types"
 STATS_VEHICLE_NATIONS_HEADLINE = "Nations"
 STATS_VEHICLE_VEHICLES_HEADLINE = "Vehicles"
-TEXT_NO_CLAN = 'none'
+STATS_VEHICLE_TABLE_COUNTER_TEXT = "#"
+STATS_VEHICLE_TABLE_TIER_TEXT = "Tier"
+STATS_VEHICLE_TABLE_BATTLES_TEXT = "Battles"
+STATS_VEHICLE_TABLE_WINS_TEXT = "Wins"
+STATS_VEHICLE_TABLE_MASTERY_TEXT = "Mastery"
+TEXT_NO_CLAN = "none"
+STATS_SHIPS_HEADLINE = "Ships"
 STATS_SHIPS_TABLE_COUNTER_TEXT = "#"
 STATS_SHIPS_TABLE_TIER_TEXT = "Tier"
 STATS_SHIPS_TABLE_BATTLES_TEXT = "Battles"
 STATS_SHIPS_TABLE_WINS_TEXT = "Wins"
-STATS_SHIPS_TABLE_FRAGS_TEXT = "Frags"
-STATS_SHIPS_TABLE_PLANES_TEXT = "Planes"
+STATS_SHIPS_TABLE_FRAGS_TEXT = "Frags (W)"
+STATS_SHIPS_TABLE_PLANES_TEXT = "Frags (A)"
+STATS_ARMAMENT_HEADLINE = "Armament Use"
+STATS_ARMAMENT_MAIN_BATTERY_LABEL = "Destroyed by Main Battery"
+STATS_ARMAMENT_AIRCRAFT_LABEL = "Destroyed by Aircraft"
+STATS_ARMAMENT_TORPEDOS_LABEL = "Destroyed by Torpedoes"
+STATS_ARMAMENT_OTHER_LABEL = "Destroyed by Other Means"
