--- a/lang/de-DE/de-DE.accounts.ini
+++ b/lang/de-DE/de-DE.accounts.ini
@@ -28,7 +28,8 @@ STATS_OVERALL_BATTLE_AVG_XP_LABEL = "Mittlere Erfahrung je Gefecht"
 STATS_OVERALL_MAX_XP_LABEL = "Max. Erfahrung pro Gefecht"
 STATS_PERFORMANCE_HEADLINE = "Leistung in Gefechten"
 STATS_PERFORMANCE_PLANES_KILLED_LABEL = "Flugzeuge zerstört"
-STATS_PERFORMANCE_FRAGS_LABEL = "Panzer zerstört"
+STATS_PERFORMANCE_FRAGS_WOT_LABEL = "Panzer zerstört"
+STATS_PERFORMANCE_FRAGS_WOWS_LABEL = "Schiffe zerstört"
 STATS_PERFORMANCE_SPOTTED_LABEL = "Aufgeklärt"
 STATS_PERFORMANCE_HITS_PERCENTS_LABEL = "Treffergenauigkeit"
 STATS_PERFORMANCE_DAMAGE_DEALT_LABEL = "Schaden"
@@ -40,10 +41,21 @@ STATS_PERFORMANCE_MAX_PLANES_LABEL = "Max. zerstörte Flugzeuge"
 STATS_VEHICLE_TYPES_HEADLINE = "Fahrzeugtyp"
 STATS_VEHICLE_NATIONS_HEADLINE = "Nationen"
 STATS_VEHICLE_VEHICLES_HEADLINE = "Fahrzeuge"
-TEXT_NO_CLAN = 'kein'
+STATS_VEHICLE_TABLE_COUNTER_TEXT = "#"
+STATS_VEHICLE_TABLE_TIER_TEXT = "Stufe"
+STATS_VEHICLE_TABLE_BATTLES_TEXT = "Gefechte"
+STATS_VEHICLE_TABLE_WINS_TEXT = "Siege"
+STATS_VEHICLE_TABLE_MASTERY_TEXT = "Kills (S)"
+TEXT_NO_CLAN = "kein"
+STATS_SHIPS_HEADLINE = "Schiffe"
 STATS_SHIPS_TABLE_COUNTER_TEXT = "#"
 STATS_SHIPS_TABLE_TIER_TEXT = "Stufe"
 STATS_SHIPS_TABLE_BATTLES_TEXT = "Gefechte"
 STATS_SHIPS_TABLE_WINS_TEXT = "Siege"
-STATS_SHIPS_TABLE_FRAGS_TEXT = "Versenkt"
-STATS_SHIPS_TABLE_PLANES_TEXT = "Abgeschossen"
+STATS_SHIPS_TABLE_FRAGS_TEXT = "Kills (S)"
+STATS_SHIPS_TABLE_PLANES_TEXT = "Kills (F)"
+STATS_ARMAMENT_HEADLINE = "Bewaffnungsbenutzung"
+STATS_ARMAMENT_MAIN_BATTERY_LABEL = "Durch Hauptbatterie zerstört"
+STATS_ARMAMENT_AIRCRAFT_LABEL = "Zerstört durch Flugzeug"
+STATS_ARMAMENT_TORPEDOS_LABEL = "Zerstört durch Torpedos"
+STATS_ARMAMENT_OTHER_LABEL = "Anderweitig zerstört"
